Update RuboCop configuration
- Add string literals style preference (single quotes)
- Disable space inside array brackets requirement
- Ensure trailing empty lines and LF line endings
- Exclude schema and config files from string literal rules

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,22 @@ inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
 # Layout/SpaceInsideArrayLiteralBrackets:
 #   Enabled: false
+
+# Prefer single quotes when possible
+Style/StringLiterals:
+  EnforcedStyle: single_quotes
+  Exclude:
+    - 'db/schema.rb'
+    - 'config/**/*'
+
+# Do not require space inside array brackets
+Layout/SpaceInsideArrayLiteralBrackets:
+  Enabled: false
+
+# Always require a final newline
+Layout/TrailingEmptyLines:
+  EnforcedStyle: final_newline
+
+# Ensure files end with a newline
+Layout/EndOfLine:
+  EnforcedStyle: lf
