--- a/config/database.yml
+++ b/config/database.yml
@@ -22,25 +22,11 @@ default: &default
 
 development:
   <<: *default
-  database: ai_travel_development
-
-  # The specified database role being used to connect to PostgreSQL.
-  # To create additional roles in PostgreSQL see `$ createuser --help`.
-  # When left blank, PostgreSQL will use the default role. This is
-  # the same name as the operating system user running Rails.
-  #username: ai_travel
-
-  # The password associated with the PostgreSQL role (username).
-  #password:
-
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
-
-  # The TCP port the server listens on. Defaults to 5432.
-  # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  database: <%= ENV.fetch('POSTGRES_DATABASE', 'ai_travel_development') %>
+  username: <%= ENV.fetch('POSTGRES_USER', '') %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD', '') %>
+  host: <%= ENV.fetch('POSTGRES_HOST', 'localhost') %>
+  port: <%= ENV.fetch('POSTGRES_PORT', '5432') %>
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -56,7 +42,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ai_travel_test
+  database: <%= ENV.fetch('TEST_POSTGRES_DATABASE', 'ai_travel_test') %>
+  username: <%= ENV.fetch('POSTGRES_USER', '') %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD', '') %>
+  host: <%= ENV.fetch('TEST_POSTGRES_HOST', ENV.fetch('POSTGRES_HOST', 'localhost')) %>
+  port: <%= ENV.fetch('TEST_POSTGRES_PORT', ENV.fetch('POSTGRES_PORT', '5432')) %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
