--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.10",
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.7",
